fixed syntax, added pages

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
 
 <head>auld-reekie</head>
-<body>
-  <p1>
-    </p1)
+  <body>
+    <h1>The Auld Reekie Guide</h1>
 
-    </body>
+    <ul>
+      <li>Home</li>
+      <li><a href = "tours.html">Tours</a></li>
+      <li><a href = "places.html">Places</a></li>
+      <li><a href = "about.html">About us</a></li>
+    </ul>
 
-    </html>
+    <p>
+    </p>
+
+  </body>
+
+</html>
