added footer, linked stylesheet, fixed links

--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <DOCTYPE! html>
 <html>
 
-<head>auld-reekie</head>
+<head>
+  <title>auld-reekie</title>
+  <link rel="stylesheet" type = "text/css" href="css/indexstyle.css">
+</head>
   <body>
     <h1>The Auld Reekie Guide</h1>
 
+    <p>
+      Welcome...
+    </p>
+
     <ul>
-      <li>Home</li>
       <li><a href = "tours.html">Tours</a></li>
-      <li><a href = "places.html">Places</a></li>
-      <li><a href = "about.html">About us</a></li>
+      <li><a href = "nightlife.html">Nightlife</a></li>
+      <li><a href = "food.html">Food</a></li>
+      <li><a href = "music.html">Music</a></li>
     </ul>
 
-    <p>
-    </p>
+    <footer>
+      <p><a href = "about.html">About us</a></p>
+      <p><a href = "contribute.html">Contribute</a><p>
+    </footer>
 
   </body>
 
