added image menu in grid, bootstrap

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>auld-reekie</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type = "text/css" href="css/indexstyle.css">
 </head>
   <body>
@@ -12,16 +13,52 @@
       Welcome...
     </p>
 
-    <ul>
+    <!-- <ul>
       <li><a href = "tours.html">Tours</a></li>
       <li><a href = "nightlife.html">Nightlife</a></li>
       <li><a href = "food.html">Food</a></li>
       <li><a href = "music.html">Music</a></li>
-    </ul>
+    </ul> -->
+
+<!-- TODO: Fix image menu for mobile view -->
+    <main role = "main" class="container">
+      <div class="row">
+        <div class="col-sm">
+          <a href = "tours.html">
+            <img class = "imgmenu" src = "images/liq.jpg">
+            <br>
+            Tours
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href = "nightlife.html">
+            <img class = "imgmenu" src = "images/liq.jpg">
+            <br>
+            Nightlife
+        </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm">
+          <a href = "food.html">
+            <img class = "imgmenu" src = "images/liq.jpg">
+            <br>
+            Food
+          </a>
+        </div>
+        <div class="col-sm">
+          <a href = "music.html">
+            <img class = "imgmenu" src = "images/liq.jpg">
+            <br>
+            Music
+          </a>
+        </div>
+      </div>
+    </main>
 
     <footer>
-      <p><a href = "about.html">About us</a></p>
-      <p><a href = "contribute.html">Contribute</a><p>
+      <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
     </footer>
 
   </body>
