very simple footer (now at bottom of page) and header added to all pages

--- a/contribute.html
+++ b/contribute.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Music</title>
+    <title>Contribute</title>
     <link rel="stylesheet" type = "text/css" href="css/listingstyle.css">
   </head>
 
