--- a/nightlife.html
+++ b/nightlife.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Music</title>
+    <title>Nightlife</title>
     <link rel="stylesheet" type = "text/css" href="css/listingstyle.css">
   </head>
 
