--- a/index.html
+++ b/index.html
@@ -7,59 +7,64 @@
   <link rel="stylesheet" type = "text/css" href="css/indexstyle.css">
 </head>
   <body>
-    <h1>The Auld Reekie Guide</h1>
+    <div class="page">
+      <div class="inner-page">
+        <h1>The Auld Reekie Guide</h1>
 
-    <p>
-      Welcome...
-    </p>
+        <p>
+          Welcome...
+        </p>
 
-    <!-- <ul>
-      <li><a href = "tours.html">Tours</a></li>
-      <li><a href = "nightlife.html">Nightlife</a></li>
-      <li><a href = "food.html">Food</a></li>
-      <li><a href = "music.html">Music</a></li>
-    </ul> -->
+        <!-- <ul>
+          <li><a href = "tours.html">Tours</a></li>
+          <li><a href = "nightlife.html">Nightlife</a></li>
+          <li><a href = "food.html">Food</a></li>
+          <li><a href = "music.html">Music</a></li>
+        </ul> -->
 
-<!-- TODO: Fix image menu for mobile view -->
-    <main role = "main" class="container">
-      <div class="row">
-        <div class="col-sm">
-          <a href = "tours.html">
-            <img class = "imgmenu" src = "images/liq.jpg">
-            <br>
-            Tours
-          </a>
-        </div>
-        <div class="col-sm">
-          <a href = "nightlife.html">
-            <img class = "imgmenu" src = "images/liq.jpg">
-            <br>
-            Nightlife
-        </a>
-        </div>
-      </div>
+        <main role = "main" class="container">
+          <div class="row">
+            <div class="col-sm">
+              <a href = "tours.html">
+                <img class = "imgmenu" src = "images/liq.jpg">
+                <br>
+                Tours
+              </a>
+            </div>
+            <div class="col-sm">
+              <a href = "nightlife.html">
+                <img class = "imgmenu" src = "images/liq.jpg">
+                <br>
+                Nightlife
+            </a>
+            </div>
+          </div>
 
-      <div class="row">
-        <div class="col-sm">
-          <a href = "food.html">
-            <img class = "imgmenu" src = "images/liq.jpg">
-            <br>
-            Food
-          </a>
-        </div>
-        <div class="col-sm">
-          <a href = "music.html">
-            <img class = "imgmenu" src = "images/liq.jpg">
-            <br>
-            Music
-          </a>
-        </div>
-      </div>
-    </main>
+          <div class="row">
+            <div class="col-sm">
+              <a href = "food.html">
+                <img class = "imgmenu" src = "images/liq.jpg">
+                <br>
+                Food
+              </a>
+            </div>
+            <div class="col-sm">
+              <a href = "music.html">
+                <img class = "imgmenu" src = "images/liq.jpg">
+                <br>
+                Music
+              </a>
+            </div>
+          </div>
+        </main>
 
-    <footer>
-      <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
-    </footer>
+      <div>
+
+        <footer>
+          <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
+        </footer>
+
+    <div>
 
   </body>
 
