added black  boxes under items in menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="inner-page">
         <h1>The Auld Reekie Guide</h1>
 
-        <p>
+        <p id="welcome">
           Welcome...
         </p>
 
@@ -22,37 +22,45 @@
           <li><a href = "music.html">Music</a></li>
         </ul> -->
 
-        <main role = "main" class="container">
+        <main role="main" class="container">
           <div class="row">
             <div class="col-sm">
-              <a href = "tours.html">
-                <img class = "imgmenu" src = "images/liq.jpg">
-                <br>
-                Tours
+              <a href="tours.html">
+                <div class="rectangle">
+                  <img class="imgmenu" src="images/liq.jpg">
+                  <br>
+                  <p class="menuitem">Tours</p>
+                </div>
               </a>
             </div>
             <div class="col-sm">
-              <a href = "nightlife.html">
-                <img class = "imgmenu" src = "images/liq.jpg">
-                <br>
-                Nightlife
-            </a>
+              <a href="nightlife.html">
+                <div class="rectangle">
+                  <img class="imgmenu" src="images/liq.jpg">
+                  <br>
+                  <p class="menuitem">Nightlife</p>
+                </div>
+              </a>
             </div>
           </div>
 
           <div class="row">
             <div class="col-sm">
-              <a href = "food.html">
-                <img class = "imgmenu" src = "images/liq.jpg">
-                <br>
-                Food
+              <a href="food.html">
+                <div class="rectangle">
+                  <img class="imgmenu" src="images/liq.jpg">
+                  <br>
+                  <p class="menuitem">Food</p>
+                </div>
               </a>
             </div>
             <div class="col-sm">
-              <a href = "music.html">
-                <img class = "imgmenu" src = "images/liq.jpg">
-                <br>
-                Music
+              <a href="music.html">
+                <div class="rectangle">
+                  <img class="imgmenu" src="images/liq.jpg">
+                  <br>
+                  <p class="menuitem">Music</p>
+                </div>
               </a>
             </div>
           </div>
