Added banner and welcome message, changed font for the title

--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   <body>
     <div class="page">
       <div class="inner-page">
-        <h1>The Auld Reekie Guide</h1>
-
+<!-- added a banner -->
+    <a title="Katie Chan [CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Edinburgh_panorama_2014-07-06_(02).jpg"><img width="1024px" alt="Edinburgh panorama 2014-07-06 (02)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Edinburgh_panorama_2014-07-06_%2802%29.jpg/1024px-Edinburgh_panorama_2014-07-06_%2802%29.jpg"></a>
+<!-- adding welcome message -->
+<h2>The Auld Reekie Guide</h2>
         <p id="welcome">
-          Welcome...
+          Hi and welcome to our first website! We are a group of the University of Edinburgh students,
+           working with Code Fist:Girls on this exiting project. This website is a collection of the best places in Edinburgh for fun, food, music and a good day out.
+           Please feel free to contribute to our collections by filing out the form available at the bottom of this page. We hope you will enjoy
+           browsing!
         </p>
 
         <!-- <ul>
@@ -21,6 +26,7 @@
           <li><a href = "food.html">Food</a></li>
           <li><a href = "music.html">Music</a></li>
         </ul> -->
+
 
         <main role="main" class="container">
           <div class="row">
