Picture and banner stretching entire width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="page">
       <div class="inner-page">
 <!-- added a banner -->
-    <a title="Katie Chan [CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Edinburgh_panorama_2014-07-06_(02).jpg"><img width="1024px" alt="Edinburgh panorama 2014-07-06 (02)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Edinburgh_panorama_2014-07-06_%2802%29.jpg/1024px-Edinburgh_panorama_2014-07-06_%2802%29.jpg"></a>
+    <a title="Katie Chan [CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Edinburgh_panorama_2014-07-06_(02).jpg"><img width="100%" alt="Edinburgh panorama 2014-07-06 (02)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Edinburgh_panorama_2014-07-06_%2802%29.jpg/1024px-Edinburgh_panorama_2014-07-06_%2802%29.jpg"></a>
 <!-- adding welcome message -->
 <h2>The Auld Reekie Guide</h2>
         <p id="welcome">
