--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 <div class="rectangle">
                   <img class="imgmenu" src="https://static1.squarespace.com/static/558ff813e4b05b489b77d4c7/t/5ba7b2c14785d34faad1b343/1537716933134/20180912_185154.jpg?format=original">
                   <br>
-                  <p class="menuitem">Tours</p>
+                  <div class="menuitem">
+                    <h5> Tours </h5>
+                    <p> lala about tours </p>
+                  </div>
+
                 </div>
               </a>
             </div>
