--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div>
 
     <footer>
-      <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
+      <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a></p>
     </footer>
 
     <div>
