Funky header menu

--- a/music.html
+++ b/music.html
@@ -9,10 +9,12 @@
   <body>
     <div class="page">
 
-        <header>
-          <p><a href = "tours.html">Tours</a>  | <a href = "nightlife.html">Nightlife</a> |
-            <a href = "food.html">Food</a>  | <a href = "music.html">Music</a><p>
-        </header>
+        <div class="header">
+          <a href = "tours.html"><div class="l">Tours</div></a>
+          <a href = "nightlife.html"><div class="l">Nightlife</div></a>
+          <a href = "food.html"><div class="l">Food</div></a>
+          <a href = "music.html"><div class="l" id="active">Music</div></a><p>
+        </div>
 
       <div class="inner-page">
 
