Description and google map added

--- a/place.html
+++ b/place.html
@@ -44,8 +44,22 @@
         </div>
 
         <h1>The Captain's Bar</h1>
-        <p>The Captain's Bar is...</p>
+        <p>And now...for the lovers of the unusual...we present:
+          The Captain's bar. This venue’s got the best folk music in all of Edinburgh.
+          If you’re in the mood for a cozy environment and some funky music with your pint,
+          head to The Captain's Bar!
+          <br><br>Address: 4 South College Street, <br>Edinburgh, <br>EH8 9AA<br>Contact: 0749 355 5702
+        </p>
 
+
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe id="gmap_canvas"
+            src="https://maps.google.com/maps?q=the%20captains%20bar%2C%20edinburgh&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><p>The Captain's Bar is just next to
+              Edinburgh University Old College.</p></iframe>
+          </div>
+        </div>
 
       </div>
 
