Improved About page
added text and link to code first

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 
   </head>
-  <link rel="stylesheet" type = "text/css" href="css/contributestyle.css">
+  <link rel="stylesheet" type = "text/css" href="css/about.css">
   </head>
 <title>About</title>
   <body>
@@ -18,6 +18,18 @@
 
       <div class="inner-page">
         <h1>Hello!</h1>
+
+        <p class = "blurb"> We are a group of students from the Edinburgh University, learning how to code.
+          This is our first website! We put it together whilst attending a course with
+          CodeFirst: Girls. To find out more about CodeFirst click below.</p>
+<a href="https://www.codefirstgirls.org.uk/">
+  <img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/1404924530.png"></a>
+
+          <p class="blurb">This page was inspired by our affection to the beautiful Edinburgh.
+          We enjoy studying here, and fell in love with Edinburgh's unique charm.
+        The collection on our website aims to help you exlopre the best of Edinburgh.</p>
+
+
 
       <footer>
         <p><a href= "contribute.html">Contribute</a><p>
@@ -37,7 +49,7 @@
     if (person == null || person == "") {
       txt = "Okay keep your secrets:)";
     } else {
-      txt = "Hello " + person + "! Thank you for visiting our website! If you have a favourite place in Edinburgh and would like to share it with us, please fill out the form in Contribute section down below";
+      txt = "Hello " + person + "! Thank you for visiting our website! If you have a favourite place in Edinburgh and would like to share it with us, please fill in the form in Contribute section down below";
     }
     document.getElementById("demo").innerHTML = txt;
   }
