Added popup for submit button
Added alert function for the submit button on the contribute form. It displays a message after click (it's phoney- only displays a message)

--- a/contribute.html
+++ b/contribute.html
@@ -28,13 +28,16 @@
           <input type="text" name="E-mail" class="text"><br>
           <p>Suggestion:</p>
           <textarea name="Suggestion" class="text" cols="40" rows="5"></textarea><br>
-          <input type="submit" value="Submit" class="button">
   </form>
+  <button onclick="myFunction()">Submit</button>
 
-
-
-      </div>
-
+  <script>
+  function myFunction() {
+    alert("Thank you for your input. We will be in touch soon. Have a lovely day :)");
+  }
+  </script>
+<br></br>
+</div>
       <footer>
         <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
       </footer>
