Font size to em and updated blurbs
1.Updated all css files 'font size' items from rem or px to em.
2.Updated blurbs with some more text.

--- a/music.html
+++ b/music.html
@@ -20,7 +20,7 @@
       <div class="inner-page">
 
         <h1>Music in Edinburgh</h1>
-        <p class = "blurb">Here you can find a collection of the best live music in town. Whatever your music taste, you are guaranteed
+        <p class = "blurb">A collection of the best live music in town. Whatever your music taste, you are guaranteed
         to have an amazing night out in any of these venues.</p>
 
         <div class="listing">
