--- a/nightlife.html
+++ b/nightlife.html
@@ -19,7 +19,8 @@
 
       <div class="inner-page">
         <h1>Nightlife in Edinburgh</h1>
-        <p class = "blurb">Find the best night clubs in Edinburgh.</p>
+        <p class = "blurb">The best night clubs in town! A varied selection of different vibes to please just about any
+        music taste. </p>
 
         <div class="listing">
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/14/72/84/0d/arty.jpg ">
