--- a/about.html
+++ b/about.html
@@ -18,19 +18,21 @@
 
         <h1>Hello!</h1>
 
-        <p class = "blurb"> We are a group of students from the Edinburgh University, learning how to code.
-          This is our first website! We put it together whilst attending a course with
+        <p class = "blurb"> We are a group of University of Edinburgh students, learning how to code with CodeFirts:Girls.
+          We put this website together whilst attending a community course with
           CodeFirst: Girls. To find out more about CodeFirst click below.</p>
+          <br></br>
 <a href="https://www.codefirstgirls.org.uk/">
   <img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/1404924530.png"></a>
-
-          <p class="blurb">This page was inspired by our affection to the beautiful Edinburgh.
-          We enjoy studying here, and fell in love with Edinburgh's unique charm.
-        The collection on our website aims to help you exlopre the best of Edinburgh.
+<br></br>
+          <p class="blurb">
+          We enjoy studying in this beautiful city, and fell in love with Edinburgh's unique charm.
+        Collections on our website aims to help you exlopre the best Edinburgh has to offer.
     </p>
+    <br></br>
         <h2>What is your name?</h2>
 
-        <button onclick="myFunction()">Say hi!</button>
+        <button onclick="myFunction()">Click me!</button>
 
         <p id="demo"></p>
 
@@ -41,7 +43,7 @@
         if (person == null || person == "") {
           txt = "Okay keep your secrets:)";
         } else {
-          txt = "Hello " + person + "! Thank you for visiting our website! If you have a favourite place in Edinburgh and would like to share it with us, please fill in the form in Contribute section down below";
+          txt = "Hello " + person + "! Thank you for visiting our website! If you would like to share with us your favourite place in Edinburgh or have a comment, please fill in the form in Contribute section down below. We would love to hear from you";
         }
         document.getElementById("demo").innerHTML = txt;
         }
