--- a/food.html
+++ b/food.html
@@ -20,7 +20,7 @@
 
             <h1>Food in Edinburgh</h1>
             <p class = "blurb">The absolute top picks for true foodies looking to try
-            fresh authentic Scottish ingredients.</p>
+            fresh, authentic Scottish ingredients.</p>
 
             <div class="listing">
               <img src="https://resizer.otstatic.com/v2/photos/large/24004931.jpg">
