Relevant description of elements
For about us and index page

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
   </head>
+  <!-- This links the document to a separate css file - handy for changing the style of the particular js elements -->
   <link rel="stylesheet" type = "text/css" href="css/about.css">
   </head>
 <title>About</title>
@@ -22,6 +23,7 @@
           We put this website together whilst attending a community course with
           CodeFirst: Girls. To find out more about CodeFirst click below.</p>
           <br></br>
+          <!-- This creates an image link -->
 <a href="https://www.codefirstgirls.org.uk/">
   <img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/1404924530.png"></a>
 <br></br>
@@ -31,18 +33,20 @@
     </p>
     <br></br>
         <h2>What is your name?</h2>
-
+<!-- This function is for the pop up window that lest the website and user to interact -->
         <button onclick="myFunction()">Click me!</button>
 
         <p id="demo"></p>
-
+<!-- this is the content of the function -->
         <script>
         function myFunction() {
         var txt;
-        var person = prompt("What is your name?");
+        // This is the message in the box for the user to answer
+        var person = prompt("What is your name?");\
         if (person == null || person == "") {
           txt = "Okay keep your secrets:)";
         } else {
+          // Message that displays on the page
           txt = "Hello " + person + "! Thank you for visiting our website! If you would like to share with us your favourite place in Edinburgh or have a comment, please fill in the form in Contribute section down below. We would love to hear from you";
         }
         document.getElementById("demo").innerHTML = txt;
