--- a/tours.html
+++ b/tours.html
@@ -19,6 +19,7 @@
 
       <div class="inner-page">
 
+<!-- title and brief blurb about tours in Edinburgh -->
         <h1>Tour Edinburgh</h1>
         <p class = "blurb">Spend a fun day in Auld Reekie!</p>
 
@@ -27,11 +28,11 @@
           <img src="https://lonelyplanetimages.imgix.net/a/g/hi/t/5217c22007a4da23e4252a127142983f-top-things-to-do-in-edinburgh.jpg">
           <div class="description">
             <h3>Party Like Gatsby</h3>
-            <!--  parahraph -->
+            <!--  description of the tour -->
             <p>Are you in the mood to feel like a millionaire? Do you want to treat yourself to a fun day with
               no limitations? Then go on the tour "Party Like Gastby"! This tour of Edinburgh gives you
               the best luxurious restaurant and pub with live music. Enjoy youself on this lavish journey.</p>
-              <!-- unordered list  -->
+              <!-- unordered list of locations in the tour -->
               <ul>
                 <li>Visit Edinburgh Castle</li>
                 <li>Visit the Palace of Holyroodhouse</li>
@@ -42,12 +43,15 @@
         </div>
 
         <div class="listing">
+          <!-- image of the national museum of scotland -->
           <img src="http://www.nms.ac.uk/media/168604/timeline-grandgallery.jpg">
           <div class="description">
             <h3>The Money-Saver</h3>
+            <!-- description of The Money-Saver tour -->
             <p>Are you tired of spending a lot of money on expensive tourist traps? Then you're in for a treat
               with our economic tour of Edinburgh. You'll get the chance to visit free museums, hike up to Arthur's seat,
               and party on a budget.
+              <!-- unordered list of all the locations in the tour -->
               <ul>
                 <li>Visit the National Museum of Scotland</li>
                 <li>Go for a hike on Arthur’s Seat</li>
@@ -60,7 +64,6 @@
 
       </div>
 
-<!-- links to about and contriute page in the footer -->
       <footer>
         <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a><p>
       </footer>
