last minute small changes
small bug fixed on bout us

--- a/about.html
+++ b/about.html
@@ -42,12 +42,12 @@
         function myFunction() {
         var txt;
         // This is the message in the box for the user to answer
-        var person = prompt("What is your name?");\
+        var person = prompt("What is your name?");
         if (person == null || person == "") {
           txt = "Okay keep your secrets:)";
         } else {
           // Message that displays on the page
-          txt = "Hello " + person + "! Thank you for visiting our website! If you would like to share with us your favourite place in Edinburgh or have a comment, please fill in the form in Contribute section down below. We would love to hear from you";
+          txt = "Hello " + person + "! Thank you for visiting our website! If you would like to share with us your favourite place in Edinburgh or have a comment, please fill in the form in Contribute section down below. We would love to hear from you.";
         }
         document.getElementById("demo").innerHTML = txt;
         }
