--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 
 <head>
   <title>auld-reekie</title>
+  <!-- Import styling from bootstrap for the grid system -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <!-- Linking the index style -->
   <link rel="stylesheet" type = "text/css" href="css/indexstyle.css">
 </head>
   <body>
     <div class="page">
       <div class="inner-page">
-<!-- added a banner -->
-    <a title="Katie Chan [CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons"
-    href="https://commons.wikimedia.org/wiki/File:Edinburgh_panorama_2014-07-06_(02).jpg">
-    <img width="100%" alt="Edinburgh panorama 2014-07-06 (02)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Edinburgh_panorama_2014-07-06_%2802%29.jpg/1024px-Edinburgh_panorama_2014-07-06_%2802%29.jpg"></a>
-<!-- adding welcome message -->
-<h2>The Auld Reekie Guide</h2>
+
+        <!-- added a banner at the top of the page-->
+        <a title="Katie Chan [CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons"
+        href="https://commons.wikimedia.org/wiki/File:Edinburgh_panorama_2014-07-06_(02).jpg">
+        <img width="100%" alt="Edinburgh panorama 2014-07-06 (02)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/Edinburgh_panorama_2014-07-06_%2802%29.jpg/1024px-Edinburgh_panorama_2014-07-06_%2802%29.jpg"></a>
+
+        <!-- adding welcome message -->
+        <h2>The Auld Reekie Guide</h2>
         <p id="welcome">
           Hi and welcome to our first website! We are a group of the University of Edinburgh students,
            working with Code Fist:Girls on this exiting project. This website is a collection of the best places in Edinburgh for fun, food, music and a good day out.
@@ -23,8 +27,7 @@
            browsing!
         </p>
 
-
-
+        <!-- Grid system (bootstrap) for displaying the image menu linking to the tours, nightlife, food and music pages -->
         <main role="main" class="container">
           <div class="row">
             <div class="col-sm">
@@ -71,9 +74,10 @@
 
       <div>
 
-    <footer>
-      <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a></p>
-    </footer>
+      <!-- A footer menu with links to administrative pages About us and Contribute -->
+      <footer>
+        <p><a href = "about.html">About us</a>  | <a href = "contribute.html">Contribute</a></p>
+      </footer>
 
     <div>
 
