Some links for the tours

--- a/tours.html
+++ b/tours.html
@@ -36,8 +36,8 @@
               the best luxurious restaurant and pub with live music. Enjoy youself on this lavish journey.</p>
               <!-- unordered list of locations in the tour -->
               <ul>
-                <li>Visit Edinburgh Castle</li>
-                <li>Visit the Palace of Holyroodhouse</li>
+                <li>Visit <a href = "https://www.edinburghcastle.scot/">Edinburgh Castle</a></li>
+                <li>Visit the <a href = "https://www.royal.uk/royal-residences-palace-holyroodhouse">Palace of Holyroodhouse</a></li>
                 <li>Go for dinner at Number One</li>
                 <li>Go for some live music at The Voodoo Rooms</li>
               </ul>
@@ -55,7 +55,7 @@
               and party on a budget.
               <!-- unordered list of all the locations in the tour -->
               <ul>
-                <li>Visit the National Museum of Scotland</li>
+                <li>Visit the <a href = "https://www.nms.ac.uk/national-museum-of-scotland/">National Museum of Scotland</a></li>
                 <li>Go for a hike on Arthur’s Seat</li>
                 <li>Go for dinner at Sonder</li>
                 <li>Party in Hive with cheap alcohol</li>
