Links in tours continiued

--- a/tours.html
+++ b/tours.html
@@ -38,8 +38,8 @@
               <ul>
                 <li>Visit <a href = "https://www.edinburghcastle.scot/">Edinburgh Castle</a></li>
                 <li>Visit the <a href = "https://www.royal.uk/royal-residences-palace-holyroodhouse">Palace of Holyroodhouse</a></li>
-                <li>Go for dinner at Number One</li>
-                <li>Go for some live music at The Voodoo Rooms</li>
+                <li>Go for dinner at <a href = "food.html">Number One</a></li>
+                <li>Go for some live music at <a href= "music.html">The Voodoo Rooms</a></li>
               </ul>
           </div>
         </div>
@@ -56,9 +56,10 @@
               <!-- unordered list of all the locations in the tour -->
               <ul>
                 <li>Visit the <a href = "https://www.nms.ac.uk/national-museum-of-scotland/">National Museum of Scotland</a></li>
-                <li>Go for a hike on Arthur’s Seat</li>
-                <li>Go for dinner at Sonder</li>
-                <li>Party in Hive with cheap alcohol</li>
+                <!-- this links to google results for Arthurs seat -->
+                <li>Go for a hike on <a href="https://www.google.co.uk/search?q=arthurs+seat+edinburgh&rlz=1C1CHBF_en-GBGB840GB840&oq=arthurs+seat+edinburgh&aqs=chrome..69i57.6119j0j7&sourceid=chrome&ie=UTF-8">Arthur’s Seat</a></li>
+                <li>Go for dinner at <a href="food.html"> Sonder</a></li>
+                <li>Party in <a href="nightlife.html"> Hive with cheap alcohol</a></li>
               </ul>
           </div>
         </div>
