--- a/tours.html
+++ b/tours.html
@@ -33,7 +33,7 @@
             <!--  description of the tour -->
             <p>Are you in the mood to feel like a millionaire? Do you want to treat yourself to a fun day with
               no limitations? Then go on the tour "Party Like Gastby"! This tour of Edinburgh gives you
-              the best luxurious restaurant and pub with live music. Enjoy youself on this lavish journey.</p>
+              the best luxurious restaurant and pub with live music.</p>
               <!-- unordered list of locations in the tour -->
               <ul>
                 <li>Visit <a href = "https://www.edinburghcastle.scot/">Edinburgh Castle</a></li>
