Fixed a spelling mistake

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>The Auld Reekie Guide</h2>
         <p id="welcome">
           Hi and welcome to our first website! We are a group of the University of Edinburgh students,
-           working with Code Fist:Girls on this exiting project. This website is a collection of the best places in Edinburgh for fun, food, music and a good day out.
+           working with Code First:Girls on this exiting project. This website is a collection of the best places in Edinburgh for fun, food, music and a good day out.
            Please feel free to contribute to our collections by filing out the form available at the bottom of this page. We hope you will enjoy
            browsing!
         </p>
