--- a/contribute.html
+++ b/contribute.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-<html>
+<html lang="en">
 
   <head>
     <!--linking html to css style sheet  -->
@@ -26,11 +26,11 @@
 
         <!-- text boxes and titles -->
         <form>
-          <p>Name:</p>
+          <label>Name:</label><br>
           <input type="text" name="Name" class="text"><br>
-          <p>E-mail:</p>
+          <label>E-mail:</label><br>
           <input type="text" name="E-mail" class="text"><br>
-          <p>Suggestion:</p>
+          <label>Suggestion:</label><br>
           <textarea name="Suggestion" class="text" cols="40" rows="5"></textarea><br>
         </form>
         <!-- calls the JavaScript function causing the modal to pop up -->
