--- a/tours.html
+++ b/tours.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-<html>
+<html lang="en">
 
   <head>
     <title>Tours</title>
@@ -27,9 +27,10 @@
 
         <div class="listing">
           <!--image of the castle  -->
-          <img src="https://lonelyplanetimages.imgix.net/a/g/hi/t/5217c22007a4da23e4252a127142983f-top-things-to-do-in-edinburgh.jpg">
+          <img src="https://lonelyplanetimages.imgix.net/a/g/hi/t/5217c22007a4da23e4252a127142983f-top-things-to-do-in-edinburgh.jpg"
+          alt="Edinburgh Castle">
           <div class="description">
-            <h3>Party Like Gatsby</h3>
+            <h2>Party Like Gatsby</h2>
             <!--  description of the tour -->
             <p>Are you in the mood to feel like a millionaire? Do you want to treat yourself to a fun day with
               no limitations? Then go on the tour "Party Like Gastby"! This tour of Edinburgh gives you
@@ -46,9 +47,9 @@
 
         <div class="listing">
           <!-- image of the national museum of scotland -->
-          <img src="http://www.nms.ac.uk/media/168604/timeline-grandgallery.jpg">
+          <img src="http://www.nms.ac.uk/media/168604/timeline-grandgallery.jpg" alt="National Museum of Scotland">
           <div class="description">
-            <h3>The Money-Saver</h3>
+            <h2>The Money-Saver</h2>
             <!-- description of The Money-Saver tour -->
             <p>Are you tired of spending a lot of money on expensive tourist traps? Then you're in for a treat
               with our economic tour of Edinburgh. You'll get the chance to visit free museums, hike up to Arthur's seat,
