--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <DOCTYPE! html>
-<html>
+<html lang="en">
 
   <head>
     <title>About</title>
@@ -28,7 +28,7 @@
 
       <!-- This creates an image link -->
       <a href="https://www.codefirstgirls.org.uk/">
-      <img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/1404924530.png"></a>
+      <img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/1404924530.png" alt="Logo of Code First: Girls."></a>
       <br></br>
 
       <p class="blurb">
@@ -36,7 +36,7 @@
         Collections on our website aims to help you exlopre the best Edinburgh has to offer.
       </p>
       <br></br>
-      
+
       <h2>What is your name?</h2>
       <!-- This function is for the pop up window that lest the website and user to interact -->
       <button onclick="myFunction()">Click me!</button>
