New attempt at labels for form

--- a/contribute.html
+++ b/contribute.html
@@ -26,11 +26,11 @@
 
         <!-- text boxes and titles -->
         <form>
-          <label>Name:</label><br>
+          <label>Name:</label>
           <input type="text" name="Name" class="text"><br>
-          <label>E-mail:</label><br>
+          <label>E-mail:</label>
           <input type="text" name="E-mail" class="text"><br>
-          <label>Suggestion:</label><br>
+          <label>Suggestion:</label>
           <textarea name="Suggestion" class="text" cols="40" rows="5"></textarea><br>
         </form>
         <!-- calls the JavaScript function causing the modal to pop up -->
