Another attempt at linking the labels in the form

--- a/contribute.html
+++ b/contribute.html
@@ -26,12 +26,12 @@
 
         <!-- text boxes and titles -->
         <form>
-          <label>Name:</label>
-          <input type="text" name="Name" class="text"><br>
-          <label>E-mail:</label>
-          <input type="text" name="E-mail" class="text"><br>
-          <label>Suggestion:</label>
-          <textarea name="Suggestion" class="text" cols="40" rows="5"></textarea><br>
+          <label for="Name">Name:</label>
+          <input type="text" name="Name" class="text" id="Name"><br>
+          <label for="Email">E-mail:</label>
+          <input type="text" name="E-mail" class="text" id="Email"><br>
+          <label for="Suggestion">Suggestion:</label>
+          <textarea name="Suggestion" class="text" cols="40" rows="5" id="Suggestion"></textarea><br>
         </form>
         <!-- calls the JavaScript function causing the modal to pop up -->
         <button onclick="myFunction()">Submit</button>
